--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IAPAN</title>
-  <link rel="stylesheet" href="/test.css">
+  <link rel="stylesheet" href="test.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="icon" type="image/png" href="Skull_and_Crossbones.svg.png">
 </head>
@@ -133,7 +133,7 @@
     </div>
   </div>
 
-  <script src="/test.js"></script>
+  <script src="test.js"></script>
   <script>
   function startCountdown(targetDate) {
     function updateCountdown() {
